Commit avant de tout recommencer..

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>The Landing Page</title>
 </head>
 <body>
@@ -20,12 +23,12 @@
     </div>
     <div class="content">
         <div class="hero">
-            <div>
-                <h1>This Website is awesome</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, vel tenetur. Officiis atque amet veritatis unde consequatur, voluptatibus quo nostrum, dolorum eos sed placeat quod qui officia tempore vel quasi?</p>
-                <button class="signin">Sign in</button>
+            <div class="hero-text-section">
+                <h1>This website is awesome</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, vel tenetur. Officiis atque amet veritatis</p>
+                <button class="signup">Sign up</button>
             </div>
-            <div>
+            <div class="hero-image-section">
                 <img src="images/_E7A4280.jpg" alt="Jeune Japonais dans une rue de Tokyo">
             </div>
         </div>
