Rajout de index.html
Il n'etait pas sauvegardé la blague..

--- a/index.html
+++ b/index.html
@@ -1,68 +1,99 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>The Landing Page</title>
-</head>
-<body>
-    <div class="header">
-        <div class="logo">Header Logo</div>
-        <div class="navigation">
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </div>
-
-    </div>
+  </head>
+  <body>
     <div class="content">
-        <div class="hero">
+      <div class="header">
+        <div class="wrap">
+            <div class="logo">Header Logo</div>
+            <div class="navigation">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
+        </div>
+      </div>
+      <div class="section hero">
+        <div class="wrap">
             <div class="hero-text-section">
-                <h1>This website is awesome</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, vel tenetur. Officiis atque amet veritatis</p>
-                <button class="signup">Sign up</button>
+              <h1>This website is awesome</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                tenetur. Officiis atque amet veritatis
+              </p>
+              <button class="signup">Sign up</button>
             </div>
             <div class="hero-image-section">
-                <img src="images/_E7A4280.jpg" alt="Jeune Japonais dans une rue de Tokyo">
+              <img
+                src="images/_E7A4280.jpg"
+                alt="Jeune Japonais dans une rue de Tokyo"
+              />
             </div>
         </div>
-        <div class="querry">
-            <h2>Some random Information</h2>
+      </div>
+      <div class="section querry">
+        <h2>Some random Information</h2>
+        <div class="wrap">
             <div class="card">
-                <div class="image"><img src="" alt=""></div>
-                <p>Lanimi et qui optio quidem architecto delectus aliquid, tempore laboriosam rem perspiciatis mollitia! Unde.</p>
+              <div class="image"><img src="images/_E7A0175.jpg" alt="" /></div>
+              <p>
+                this is some subtext under an illustration or image
+              </p>
             </div>
             <div class="card">
-                <div class="image"><img src="" alt=""></div>
-                <p>Lanimi et qui optio quidem architecto delectus aliquid, tempore laboriosam rem perspiciatis mollitia! Unde.</p>
+              <div class="image"><img src="images/_E7A2218.jpg" alt="" /></div>
+              <p>
+                Lanimi et qui optio quidem architecto delectus aliquid, tempore
+              </p>
             </div>
             <div class="card">
-                <div class="image"><img src="" alt=""></div>
-                <p>Lanimi et qui optio quidem architecto delectus aliquid, tempore laboriosam rem perspiciatis mollitia! Unde.</p>
+              <div class="image"><img src="images/_E7A2973.jpg" alt="" /></div>
+              <p>
+                Lanimi et qui optio quidem architecto delectus aliquid, tempore
+              </p>
             </div>
             <div class="card">
-                <div class="image"><img src="" alt=""></div>
-                <p>Lanimi et qui optio quidem architecto delectus aliquid, tempore laboriosam rem perspiciatis mollitia! Unde.</p>
+              <div class="image"><img src="images/_E7A4463.jpg" alt="" /></div>
+              <p>
+                Lanimi et qui optio quidem architecto delectus aliquid, tempore
+              </p>
             </div>
         </div>
-        <div class="testimonial">
-            <p>This is an inspiring quote, or a testimonial from a costumer. Maybe it's just filling up sapce of maybe with actually read it. Who gives a fuck anyway?</p>
-            <p>- Larry David, CEO of PDG</p>
+      </div>
+      <div class="section testimonial">
+        <div class="wrap">
+            <p class="quote">
+              " This is an inspiring quote, or a testimonial from a costumer. Maybe
+              it's just filling up space that no one will actually read. Who cares anyway? "
+            </p>
+            <p class="name">- Larry David, CEO of PDG</p>
         </div>
-        <div class="section-bas">
-            <div class="CTA">
-            </div>
+      </div>
+    <div class="section toutenbas">
+        <div class="wrap">
+                <div class="wrapB">
+                    <h3>Call to Action! It's time!!</h3>
+                    <h4>Sign up for our product by clicking that button right over there !</h4>
+                </div>
+                <button class="signup">Sign up</button>
         </div>
     </div>
-    <div class="footer">
+      <div class="footer">
         <p>Copyright (c) The Odin Project 2026</p>
-
+      </div>
     </div>
-</body>
+  </body>
 </html>
